# src/apps/ipc/ipc_device/router.go
@@ -5,6 +5,7 @@ import "CrestedIbis/src/global"
 func InitIpcDeviceRouter() {
 	ipcDeviceRouter := global.HttpEngine.Group("/ipc/device")
 	{
+		ipcDeviceRouter.DELETE("", DeleteIpcDevice)
 		ipcDeviceRouter.GET("/devices", GetIpcDevicesByPages)
 		ipcDeviceRouter.GET("/channels", GetIpcChannels)
 		ipcDeviceRouter.POST("/upload_image", IpcUploadImage)
