# src/apps/ipc/ipc_device/server.go
@@ -6,6 +6,21 @@ import (
 	"fmt"
 )
 
+func deleteIpcDevice(deviceID string) (err error) {
+	// 删除对应通道
+	err = global.Db.Model(&IpcChannel{}).Where(&IpcChannel{
+		ParentID: deviceID,
+	}).Delete(&IpcChannel{}).Error
+	if err != nil {
+		return
+	}
+
+	err = global.Db.Model(&IpcDevice{}).Where(&IpcDevice{
+		DeviceID: deviceID,
+	}).Delete(&IpcDevice{}).Error
+	return
+}
+
 // selectIpcDeviceByPages 分页搜索IpcDevices
 // page: 页码，pageSize: 每页的数量
 func selectIpcDevicesByPages(page int64, pageSize int64) (total int64, ipcDevices []IpcDevice, err error) {
